0.84 -> 0.85
GENERAL:
* New artifacts supported:
- Statesman's Medal
- Diplomat's Ring
- Ambassador's Sash


0.83 -> 0.84 (Mar 01 2011)
GENERAL:
* Bonus system has been rewritten
* Partial support for running VCMI in duel mode (no adventure map, only one battle, ATM only AI-AI battles)
* New artifacts supported:
- Angellic Alliance
- Bird of Perception
- Emblem of Cognizance
- Spell Scroll
- Stoic Watchman

BATTLES:
* Better animations handling
* Defensive stance is supported

HERO:
* New secondary skills supported:
- Artillery
- Eagle Eye
- Tactics

AI PLAYER:
* new AI leading neutral creatures in combat, slightly better then previous


0.82 -> 0.83 (Nov 01 2010)
GENERAL:
* Alliances support
* Week of / Month of events
* Mostly done pregame for MP games (temporarily only for local clients)
* Support for 16bpp displays
* Campaigns:
 - support for building bonus
 - moving to next map after victory
* Town Portal supported
* Vial of Dragon Blood and Statue of Legion supported

HERO:
* remaining specialities have been implemented

TOWNS:
* town events supported
* Support for new town structures: Deiety of Fire and Escape Tunnel 

BATTLES:
* blocked retreating from castle


0.81 -> 0.82 (Aug 01 2010)
GENERAL:
* Some of the starting bonuses in campaigns are supported
* It's possible to select difficulty level of mission in campaign
* new cheat codes:
- vcmisilmaril - player wins
- vcmimelkor - player loses

ADVENTURE MAP:
* Neutral armies growth implemented (10% weekly)
* Power rating of neutral stacks
* Favourable Winds reduce sailing cost

HERO:
* Learning secondary skill supported.
* Most of hero specialities are supported, including:
-Creature specialities (progressive, fixed, Sir Mullich)
-Spell damage specialities (Deemer), fixed bonus (Ciele)
-Secondary skill bonuses
-Creature Upgrades (Gelu)
-Resorce generation
-Starting Skill (Adrienne)

TOWNS:
* Support for new town structures:
- Artifact Merchant
- Aurora Borealis
- Castle Gates
- Magic University